--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^16.0.7",
+    "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "openapi-fetch": "^0.15.0",
     "react": "19.1.0",
