--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.948.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -19,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next": "^16.0.7",
+    "next-auth": "^4.24.13",
     "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "openapi-fetch": "^0.15.0",
