feat: employee page

--- a/redocly.yml
+++ b/redocly.yml
@@ -3,3 +3,8 @@ apis:
     root: https://kpxtwsz84a.execute-api.eu-central-1.amazonaws.com/doc
     x-openapi-ts:
       output: ./src/lib/dashboard-mgt-bff/types.ts
+
+  dashboard-employee-bff:
+    root: https://a164xqh80b.execute-api.eu-central-1.amazonaws.com/doc
+    x-openapi-ts:
+      output: ./src/lib/dashboard-employee-bff/types.ts
